body - overflowX - hidden

--- a/Architecture/For-Developers/assets/css/style.css
+++ b/Architecture/For-Developers/assets/css/style.css
@@ -11123,6 +11123,10 @@ textarea.form-control-lg {
   text-align: right;
 }
 
+body {
+  overflow-x: hidden;
+}
+
 .yellow-box {
   width: 5rem;
   height: 5rem;
